--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Restaurante</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
@@ -39,6 +39,60 @@
 	</nav>
 
 <!-- Navigation Ends Here -->
+
+<!-- Carousel -->
+
+<div class="container-fluid wrap">
+	<div id="mycarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#mycarousel" data-slide-to="1"></li>
+    <li data-target="#mycarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active main_img1">
+
+      <div class="carousel-caption">
+        <img src="img/logo-01.png" alt="Restaurant Logo" class="img-responsive main_logo center-block">
+      </div>
+    </div>
+    <div class="item main_img2">
+      <!-- <img src="..." alt="..."> -->
+      <div class="carousel-caption">
+        <h1>Eat Local</h1>
+        <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem nulla officia, harum dolorum maiores sapiente, iste eveniet molestiae quaerat atque reiciendis modi sunt dolores magni placeat et similique, magnam dolor.</p>
+        <button class="btn btn-lg btn-danger">Learn More</button>
+      </div>
+    </div>
+
+		<div class="item main_img3">
+			<!-- <img src="..." alt="..."> -->
+			<div class="carousel-caption">
+				<h1>From farm to table.</h1>
+				<p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem nulla officia, harum dolorum maiores sapiente, iste eveniet molestiae quaerat atque reiciendis modi sunt dolores magni placeat et similique, magnam dolor.</p>
+				<button class="btn btn-lg btn-danger">Browse gallery</button>
+			</div>
+		</div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+
+
+
+<!-- End Carousel -->
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
