--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
 
 
 <!-- End Carousel -->
+
+<div class="container-fluid" id="our_story">
+	<div class="row our_story_row">
+		<div class="col-sm-4 col-sm-offset-1">
+			<h1 class="our_story">Our story</h1>
+			<h3 class="one_man">One Man. One Dream</h3>
+		</div>
+		<div class="col-sm-5 col-sm-offset-1">
+			<h2 class="story-year">1989</h2>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat commodi, voluptatibus fugiat rerum eum illo repellat? Odio vel reprehenderit quam consequatur sint possimus voluptates, facere cumque est! Aliquam hic, rerum quidem eaque nesciunt, ratione architecto animi totam, modi dolores tempore.</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur temporibus eos suscipit corporis ut mollitia, perspiciatis laborum facere sed ullam porro aspernatur dolorem velit voluptates cumque debitis numquam accusamus vero provident deleniti quasi. Reiciendis quae obcaecati expedita rem, incidunt qui.</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium hic quo, esse inventore pariatur consequuntur magnam quae, unde aut repellendus. Illum, tempora deleniti explicabo accusamus debitis doloremque, ducimus id rerum voluptas modi qui velit dignissimos voluptatum, officiis in incidunt magnam!</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis placeat nostrum, temporibus neque accusantium quaerat odio adipisci omnis, sequi non, nemo nesciunt, cumque quam! Temporibus, est velit expedita esse maiores ex amet incidunt unde eius, vero nobis officia ad, quae.</p>
+		</div>
+	</div>
+</div>
+
+
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
